--- a/cloud-config-server/template/cloud-config.template
+++ b/cloud-config-server/template/cloud-config.template
@@ -46,6 +46,31 @@ coreos:
             RemainAfterExit=yes
             Type=oneshot
 
+        - name: "sendhostname.service"
+          command: stop #TODO: start
+          content: |
+            [Unit]
+            Description=Send hostname and IP to etcd2
+            Requires=etcd2.service
+            After=etcd2.service
+            [Service]
+            ExecStart=/usr/bin/etcdctl set /skydns/com/unisound/ailab/%H '{"host":"$public_ipv4"}' 
+            Type=oneshot
+
+        - name: "install-k8s.service"
+          command: restart
+          content: |
+            [Unit]
+            Description=Install k8s services
+            [Service]
+            {{- with .K8sRole }}
+            ExecStart=cd /home/core && /usr/bin/wget http://10.10.10.192/install-k8s/{{ . }}.zip && unzip {{ . }}.zip && cd {{ . }} && bash setup_k8s_{{ . }}.sh     
+            {{- else }}
+            ExecStart=cd /home/core && /usr/bin/wget http://10.10.10.192/install-k8s/worker.zip && unzip worker.zip && cd worker && bash setup_k8s_worker.sh
+            {{- end }}
+            RemainAfterExit=yes
+            Type=oneshot
+
 hostname: "{{ .Hostname }}"
 
 ssh_authorized_keys:
