--- a/cloud-config-server/template/unisound-ailab/build_config.yml
+++ b/cloud-config-server/template/unisound-ailab/build_config.yml
@@ -1,24 +1,24 @@
 nodes:
   "00-25-90-c0-f7-80":
     ip: "10.10.10.201"
-    ceph_role: "member"
+    ceph_role: "mon"
     k8s_role: "master" # can be "master" or "worker" or "" (empty string == worker)
   "00-25-90-c0-f6-ee":
     ip: "10.10.10.202"
-    ceph_role: "member"
-    k8s_role: "master"
+    ceph_role: "mon"
+    k8s_role: "worker"
   "00-25-90-c0-f6-d6":
     ip: "10.10.10.203"
-    ceph_role: "member"
-    k8s_role: "master"
+    ceph_role: "mon"
+    k8s_role: "worker"
   "00-25-90-c0-f7-ac":
     ip: "10.10.10.204"
-    ceph_role: "member"
-    k8s_role: "master"
+    ceph_role: ""
+    k8s_role: "worker"
   "00-25-90-c0-f7-7e":
     ip: "10.10.10.205"
-    ceph_role: "member"
-    k8s_role: "master"
+    ceph_role: ""
+    k8s_role: "worker"
 
 global:
   initial_cluster: "00-25-90-c0-f7-80=http://10.10.10.201:2380,00-25-90-c0-f6-ee=http://10.10.10.202:2380,00-25-90-c0-f6-d6=http://10.10.10.203:2380,00-25-90-c0-f7-ac=http://10.10.10.204:2380,00-25-90-c0-f7-7e=http://10.10.10.205:2380"
