wrong path; template format error;

--- a/cloud-config-server/template/cloud-config.template
+++ b/cloud-config-server/template/cloud-config.template
@@ -67,7 +67,7 @@ coreos:
             RemainAfterExit=yes
             Type=oneshot
 
-        {{- with .CephRole }
+        {{- with .CephRole }}
         - name: "ceph-mon.service"
           command: restart
           content: |
