--- a/cloud-config-server/template/cloud-config.template
+++ b/cloud-config-server/template/cloud-config.template
@@ -46,7 +46,7 @@ coreos:
             RemainAfterExit=yes
             Type=oneshot
 
-        - name: "sendhostname.service"
+        - name: "set-dns-to-etcd.service"
           command: start
           content: |
             [Unit]
@@ -54,7 +54,10 @@ coreos:
             Requires=etcd2.service
             After=etcd2.service
             [Service]
-            ExecStart=cd /home/core && /usr/bin/wget -O wait-for-etcd-cluster.sh http://10.10.10.192/wait-for-etcd-cluster.sh && bash wait-for-etcd-cluster.sh && /usr/bin/etcdctl set /skydns/com/unisound/ailab/%H '{"host":"$public_ipv4"}' 
+            ExecStart=/usr/bin/wget -O /home/core/wait-for-etcd-cluster.sh http://10.10.10.192/wait-for-etcd-cluster.sh
+            ExecStart=/usr/bin/wget -O /home/core/set-dns-to-etcd.sh http://10.10.10.192/set-dns-to-etcd.sh
+            ExecStart=/bin/bash /home/core/wait-for-etcd-cluster.sh
+            ExecStart=/bin/bash /home/core/set-dns-to-etcd.sh
             RemainAfterExit=yes
             Type=oneshot
 
@@ -64,7 +67,10 @@ coreos:
             [Unit]
             Description=Install ceph osd service
             [Service]
-            ExecStart=cd /home/core && /usr/bin/wget -O wait-for-etcd-cluster.sh http://10.10.10.192/wait-for-etcd-cluster.sh && bash wait-for-etcd-cluster.sh && /usr/bin/wget -O install-osd.sh http://10.10.10.192/ceph/install-osd.sh && bash install-osd.sh
+            ExecStart=/usr/bin/wget -O /home/core/wait-for-etcd-cluster.sh http://10.10.10.192/wait-for-etcd-cluster.sh
+            ExecStart=/usr/bin/wget -O /home/core/install-osd.sh http://10.10.10.192/ceph/install-osd.sh
+            ExecStart=/bin/bash /home/core/wait-for-etcd-cluster.sh
+            ExecStart=/bin/bash /home/core/install-osd.sh
             RemainAfterExit=yes
             Type=oneshot
 
@@ -75,7 +81,10 @@ coreos:
             [Unit]
             Description=Install ceph mon services
             [Service]
-            ExecStart=cd /home/core && /usr/bin/wget -O wait-for-etcd-cluster.sh http://10.10.10.192/wait-for-etcd-cluster.sh && bash wait-for-etcd-cluster.sh && /usr/bin/wget -O install-mon.sh http://10.10.10.192/ceph/install-mon.sh && bash install-mon.sh
+            ExecStart=/usr/bin/wget -O /home/core/wait-for-etcd-cluster.sh http://10.10.10.192/wait-for-etcd-cluster.sh
+            ExecStart=/usr/bin/wget -O /home/core/install-mon.sh http://10.10.10.192/ceph/install-mon.sh
+            ExecStart=/bin/bash /home/core/wait-for-etcd-cluster.sh
+            ExecStart=/bin/bash /home/core/install-mon.sh
             RemainAfterExit=yes
             Type=oneshot
         {{- end }}
@@ -86,10 +95,16 @@ coreos:
             [Unit]
             Description=Install k8s services
             [Service]
+            ExecStart=/usr/bin/wget -O /home/core/wait-for-etcd-cluster.sh http://10.10.10.192/wait-for-etcd-cluster.sh
+            ExecStart=/bin/bash /home/core/wait-for-etcd-cluster.sh
             {{- with .K8sRole }}
-            ExecStart=cd /home/core && /usr/bin/wget -O wait-for-etcd-cluster.sh http://10.10.10.192/wait-for-etcd-cluster.sh && bash wait-for-etcd-cluster.sh && /usr/bin/wget -O {{ . }}.zip http://10.10.10.192/install-k8s/{{ . }}.zip && unzip -o {{ . }}.zip && cd {{ . }} && bash setup_k8s_{{ . }}.sh
+            ExecStart=/usr/bin/wget -O /home/core/{{ . }}.zip http://10.10.10.192/install-k8s/{{ . }}.zip
+            ExecStart=/usr/bin/unzip -d /home/core -o /home/core/{{ . }}.zip
+            ExecStart=/bin/bash /home/core/{{ . }}/setup_k8s_{{ . }}.sh
             {{- else }}
-            ExecStart=cd /home/core && /usr/bin/wget -O wait-for-etcd-cluster.sh http://10.10.10.192/wait-for-etcd-cluster.sh && bash wait-for-etcd-cluster.sh && /usr/bin/wget -O worker.zip http://10.10.10.192/install-k8s/worker.zip && unzip -o worker.zip && cd worker && bash setup_k8s_worker.sh
+            ExecStart=/usr/bin/wget -O /home/core/worker.zip http://10.10.10.192/install-k8s/worker.zip
+            ExecStart=/usr/bin/unzip -d /home/core -o /home/core/worker.zip
+            ExecStart=/bin/bash /home/core/worker/setup_k8s_worker.sh
             {{- end }}
             RemainAfterExit=yes
             Type=oneshot
