auto generate cert file with bulid_config ip

--- a/cloud-config-server/template/cloud-config.template
+++ b/cloud-config-server/template/cloud-config.template
@@ -12,13 +12,13 @@ write_files:
 	  owner: core
 		permissions: 0600
 		content: |
-		  {{ .CertApiServer }}
+		  {{ .CertAPIServer }}
   
 	- path: /etc/kubernetes/ssl/apiserver-key.pem
 	  owner: core
 		permissions: 0600
 		content: |
-		  {{ .CertApiServerKey }}
+		  {{ .CertAPIServerKey }}
 
   {{- else }}
 	- path: /etc/kubernetes/ssl/worker.pem
