change master manifest to write-file mode

--- a/cloud-config-server/template/cloud-config.template
+++ b/cloud-config-server/template/cloud-config.template
@@ -80,24 +80,122 @@ write_files:
     owner: root
     permissions: 0755
     content: |
-      #! /usr/bin/bash
+      apiVersion: v1
+      kind: Pod
+      metadata:
+        name: kube-controller
+      spec:
+        hostNetwork: true
+        volumes:
+          - name: "etc-kubernetes"
+            hostPath:
+              path: "/etc/kubernetes"
+          - name: ssl-certs-kubernetes
+            hostPath:
+              path: /etc/kubernetes/ssl
+          - name: "ssl-certs-host"
+            hostPath:
+              path: "/usr/share/ca-certificates"
+          - name: "var-run-kubernetes"
+            hostPath:
+              path: "/var/run/kubernetes"
+          - name: "etcd-datadir"
+            hostPath:
+              path: "/var/lib/etcd"
+          - name: "usr"
+            hostPath:
+              path: "/usr"
+          - name: "lib64"
+            hostPath:
+              path: "/lib64"
+        containers:
+          - name: kube-apiserver
+            image: typhoon1986/hyperkube-amd64:v1.2.0
+            command:
+              - /hyperkube
+              - apiserver
+              - --allow-privileged=true
+              - --bind-address=0.0.0.0
+              - --insecure-bind-address=0.0.0.0
+              - --secure-port=443
+              - --etcd-servers=http://{{ .MasterIP }}:4001
+              - --service-cluster-ip-range=10.100.0.0/24
+              - --admission-control=NamespaceLifecycle,NamespaceExists,LimitRanger,SecurityContextDeny,ServiceAccount,ResourceQuota
+              - --service-account-key-file=/etc/kubernetes/ssl/apiserver-key.pem
+              - --tls-private-key-file=/etc/kubernetes/ssl/apiserver-key.pem
+              - --tls-cert-file=/etc/kubernetes/ssl/apiserver.pem
+              - --client-ca-file=/etc/kubernetes/ssl/ca.pem
+              - --logtostderr=true
+            ports:
+              - containerPort: 443
+                hostPort: 443
+                name: https
+              - containerPort: 8080
+                hostPort: 8080
+                name: local
+            volumeMounts:
+              - mountPath: /etc/kubernetes/ssl
+                name: ssl-certs-kubernetes
+                readOnly: true
+              - mountPath: /etc/ssl/certs
+                name: ssl-certs-host
+                readOnly: true
+              - mountPath: /etc/kubernetes
+                name: "etc-kubernetes"
+              - mountPath: /var/run/kubernetes
+                name: "var-run-kubernetes"
 
-      # Ensure directories exists.
-      sudo mkdir -p /etc/kubernetes/manifests/
-      sudo mkdir -p /etc/kubernetes/ssl/
-      sudo mkdir -p /etc/kubernetes/addons/
+          - name: kube-controller-manager
+            image: typhoon1986/hyperkube-amd64:v1.2.0
+            command:
+            - /hyperkube
+            - controller-manager
+            - --master=http://127.0.0.1:8080
+            - --service-account-private-key-file=/etc/kubernetes/ssl/apiserver-key.pem
+            - --root-ca-file=/etc/kubernetes/ssl/ca.pem
+            livenessProbe:
+              httpGet:
+                host: 127.0.0.1
+                path: /healthz
+                port: 10252s
+              initialDelaySeconds: 15
+              timeoutSeconds: 1
+            volumeMounts:
+            - mountPath: /etc/kubernetes/ssl
+              name: ssl-certs-kubernetes
+              readOnly: true
+            - mountPath: /etc/ssl/certs
+              name: ssl-certs-host
+              readOnly: true
 
-      if [ ! -f /etc/kubernetes/manifests/kubernetes-master.manifest ]; then
-        echo "Manifests not installed - installing."
+          - name: kube-scheduler
+            image: typhoon1986/hyperkube-amd64:v1.2.0
+            command:
+            - /hyperkube
+            - scheduler
+            - --master=http://127.0.0.1:8080
+            livenessProbe:
+              httpGet:
+                host: 127.0.0.1
+                path: /healthz
+                port: 10251
+              initialDelaySeconds: 15
+              timeoutSeconds: 1
 
-        # Download config.
-        sudo wget -N -P /etc/kubernetes/manifests/ https://raw.githubusercontent.com/typhoonzero/kubernetes_binaries/master/cloud-config/kubernetes_master.manifest
-      fi
+          - name: kube-proxy
+            image: typhoon1986/hyperkube-amd64:v1.2.0
+            command:
+            - /hyperkube
+            - proxy
+            - --master=http://127.0.0.1:8080
+            - --proxy-mode=iptables
+            securityContext:
+              privileged: true
+            volumeMounts:
+            - mountPath: /etc/ssl/certs
+              name: ssl-certs-host
+              readOnly: true
 
-      # Insert the master's IP address into the manifest.
-      echo "DEFAULT_IPV4: $DEFAULT_IPV4"
-      sudo sed -i -e "s/<ETCD_ENDPOINTS>/http:\/\/{{ .MasterIP }}:4001/g" /etc/kubernetes/manifests/kubernetes_master.manifest
-      sudo sed -i -e "s/<MASTER_IP>/{{ .MasterIP }}/g" /etc/kubernetes/manifests/kubernetes_master.manifest
   - path: /etc/kubernetes/ssl/generate-tls-keys.sh
     owner: root
     permissions: 0755
@@ -367,19 +465,6 @@ coreos:
                 ExecStartPre=/usr/bin/etcdctl set /coreos.com/network/config '{ "Network": "10.1.0.0/16" }'
           command: "start"
 
-        - name: manifest-install.service
-          runtime: true
-          command: start
-          content: |
-            [Unit]
-            Description=Installs Manifests
-            After=setup-network-environment.service
-            Requires=setup-network-environment.service
-            [Service]
-            EnvironmentFile=/etc/network-environment
-            ExecStart=/opt/bin/install-manifests.sh
-            RemainAfterExit=yes
-            Type=oneshot
 
         - name: kubelet.service
           runtime: true
